<resources>
    <string name="app_name">MVP - Contact List App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_loading_listview">Error loading users, please make sure you have good internet connection.\n Error detail: %1$s</string>
    <string name="error_loading_listview2">Error loading users, please make sure you have good internet connection and load again from the server.\n Error detail: %1$s</string>
    <string name="try_again">\n Click here to try again.</string>
    <string name="sort_az">Sort A-Z</string>
    <string name="sort_za">Sort Z-A</string>
    <string name="sort_az_load">Sorting A-Z</string>
    <string name="sort_za_load">Sorting Z-A</string>
    <string name="loading_users">Loading list of contacts from server...</string>


    <string name="view_tag1">viewTag1</string>
    <string name="title_activity_user_detail">User Details </string>
    <string name="action_settings">Settings</string>

    <!-- related to user details-->
    <string name="label_username">Username</string>
    <string name="label_phone">Phone</string>
    <string name="label_address">Address</string>
    <string name="label_website">Website</string>
    <string name="label_company">Company</string>
    <string name="label_name">Name</string>

    <string name="owner">Hilfritz P. Camallere
        camallere_h@yahoo.com.ph
    </string>

</resources>
