
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.contactlist.detail.UserDetailActivityFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="hi there, error message here"
        android:id="@+id/messageTextView"
        android:layout_centerInParent="true"
        style="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="@dimen/padding_a"
        android:padding="@dimen/padding_a"
        android:textColor="@color/text_color"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/mainLinearLayout"
        tools:showIn="@layout/activity_user_detail">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/value"
            style="?android:textAppearanceLarge"
            tools:text="value"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceListItemSmall"
            tools:text="label"
            android:text="@string/label_name"
            android:textColor="@color/grey2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/value1"
            style="?android:textAppearanceLarge"
            tools:text="value"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceListItemSmall"
            tools:text="label"
            android:text="@string/label_username"
            android:textColor="@color/grey2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/value2"
            style="?android:textAppearanceLarge"
            tools:text="value"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceListItemSmall"
            tools:text="label"
            android:text="@string/label_phone"
            android:textColor="@color/grey2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/value3"
            style="?android:textAppearanceLarge"
            tools:text="value"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceListItemSmall"
            tools:text="label"
            android:text="@string/label_address"
            android:textColor="@color/grey2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/value4"
            style="?android:textAppearanceLarge"
            tools:text="value"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceListItemSmall"
            tools:text="label"
            android:text="@string/label_website"
            android:textColor="@color/grey2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/value5"
            style="?android:textAppearanceLarge"
            tools:text="value"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceListItemSmall"
            tools:text="label"
            android:text="@string/label_company"
            android:textColor="@color/grey2"
            />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>